Location relation split

--- a/buvtPyScript/.vscode/launch.json
+++ b/buvtPyScript/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "./buvtPyScript.py",
-      "args": ["singleFile", "~/progPython/buvt-SourceFs/Source/aaa.txt"],
+      "args": ["singleFile", "~/progPython/buvt-SourceFs/SourceA/aaa.txt"],
       "console": "integratedTerminal",
       "justMyCode": true
     },
@@ -19,14 +19,15 @@
       "request": "launch",
       "program": "./__main__.py",
 
-      "args": ["parseTreeNDump", "--charFilterMethod", "b", "--leafFilter", ".buvt-filter", "--leafFilterFirst", ".buvt-filter", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/TargetOther"],
+      "args": ["parseTreeNDump", "--charFilterMethod", "b", "--leafFilter", ".buvt-filter", "--leafFilterFirst", ".buvt-filter", "--fiDir", "/home/magnus/progPython/buvt-TargetFs"],
+      //"args": ["parseTreeNDump", "--charFilterMethod", "b", "--leafFilter", ".buvt-filter", "--leafFilterFirst", ".buvt-filter", "--fiDir", "/run/media/magnus/myPassport"],
       //"args": ["parseTreeNDump", "--charFilterMethod", "R", "--leafFilter", ".buvt-filter", "--leafFilterFirst", ".buvt-filter-2G", "--fiDir", "/run/media/magnus/myPassport"],
-      //"args": ["parseTreeNDump", "--charFilterMethod", "R", "--leafFilter", ".rsync-filter", "--leafFilterFirst", ".rsync-filter", "--fiDir", "~/progPython/buvt-SourceFs/Source"],
-      //"args": ["parseTreeNDump", "--charFilterMethod", "R", "--leafFilter", ".rsync-filter", "--leafFilterFirst", ".rsync-filter", "--fiDir", "~/progPython/buvt-SourceFs/Source"],
+      //"args": ["parseTreeNDump", "--charFilterMethod", "R", "--leafFilter", ".rsync-filter", "--leafFilterFirst", ".rsync-filter", "--fiDir", "~/progPython/buvt-SourceFs/SourceA"],
+      //"args": ["parseTreeNDump", "--charFilterMethod", "R", "--leafFilter", ".rsync-filter", "--leafFilterFirst", ".rsync-filter", "--fiDir", "~/progPython/buvt-SourceFs/SourceA"],
       //"args": ["parseTreeNDump", "--charFilterMethod", "r", "--leafFilter", ".rsync-filter", "--leafFilterFirst", ".rsync-filter", "--fiDir", "~"],
-      //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "~/progPython/buvt-SourceFs/Source"],
-      //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "C:\\Users\\emagn\\Documents\\Source"],
-      //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "~/progPython/buvt-TargetFs/Target"],
+      //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "~/progPython/buvt-SourceFs/SourceA"],
+      //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "C:\\Users\\emagn\\Documents\\SourceA"],
+      //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "~/progPython/buvt-TargetFs/TargetA"],
       //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--fiDir", "/run/media/magnus/myPassport/buvt_folderForTest/mySync"],
       //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--leafFilterFirst", ".buvt-filter-1G-test", "--fiDir", "D:\\synced"],
       //"args": ["parseTreeNDump", "--leafFilter", ".buvt-filter", "--leafFilterFirst", ".buvt-filter", "--fiDir", "~"],
@@ -60,7 +61,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "./__main__.py",
-      "args": ["check", "--fiDbDir", "~/progPython/buvt-SourceFs/Source"],
+      "args": ["check", "--fiDbDir", "~/progPython/buvt-SourceFs/SourceA"],
       //"args": ["check", "--iStart", "0", "--fiDbDir", "/run/media/magnus/myPassport/sync"],
       //"args": ["check", "--iStart", "20629", "--fiDbDir", "~"],
       //"args": ["check", "--iStart", "0", "--fiDbDir", "/run/media/magnus/myPassport/filmM/seen/test"],
@@ -72,7 +73,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "./__main__.py",
-      "args": ["copyLocally", "--fiDir", "~/progPython/buvt-TargetFs/Target", "--fiFile", "/tmp/buvtArg.txt"],
+      "args": ["copyLocally", "--fiDir", "~/progPython/buvt-TargetFs/TargetA", "--fiFile", "/tmp/buvtArg.txt"],
       "console": "integratedTerminal",
       "justMyCode": true
     },
@@ -81,8 +82,8 @@
       "type": "debugpy",
       "request": "launch",
       "program": "./__main__.py",
-      //"args": ["calcHashes", "--fiDir", "~/progPython/buvt-SourceFs/Source", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
-      "args": ["calcHashes", "--fiDir", "/home/magnus/progPython/buvt-SourceFs/Source", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
+      //"args": ["calcHashes", "--fiDir", "~/progPython/buvt-SourceFs/SourceA", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
+      "args": ["calcHashes", "--fiDir", "/home/magnus/progPython/buvt-SourceFs/SourceA", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
       "console": "integratedTerminal",
       "justMyCode": true
     },
@@ -91,8 +92,8 @@
       "type": "debugpy",
       "request": "launch",
       "program": "./__main__.py",
-      //"args": ["getId", "--fiDir", "/home/magnus/progPython/buvt-SourceFs/Source", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
-      "args": ["getId", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/Target", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
+      //"args": ["getId", "--fiDir", "/home/magnus/progPython/buvt-SourceFs/SourceA", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
+      "args": ["getId", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/TargetA", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
       "console": "integratedTerminal",
       "justMyCode": true
     },
@@ -101,9 +102,9 @@
       "type": "debugpy",
       "request": "launch",
       "program": "./__main__.py",
-      //"args": ["setMTime", "--fiDir", "/home/magnus/progPython/buvt-SourceFs/Source", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
-      //"args": ["setMTime", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/Target", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
-      "args": ["setMTime", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/Target", "--fiFile", "/tmp/buvt/result/arg.txt"],
+      //"args": ["setMTime", "--fiDir", "/home/magnus/progPython/buvt-SourceFs/SourceA", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
+      //"args": ["setMTime", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/TargetA", "--fiFile", "/run/media/magnus/myPassport/buvtArg/arg.txt"],
+      "args": ["setMTime", "--fiDir", "/home/magnus/progPython/buvt-TargetFs/TargetA", "--fiFile", "/tmp/buvt/result/arg.txt"],
       "console": "integratedTerminal",
       "justMyCode": true
     }
